--- a/PC/css/new/cs_last.css
+++ b/PC/css/new/cs_last.css
@@ -1,7 +1,13 @@
 @charset "utf-8";
+/* font-weight: 100 ~ 900 
+	300: Light
+	400: Regular
+	500: Medium
+	700: bold
 
+*/
 /*----- cs css all Modified - 고객센터 css 폰트종류 폰트사이즈 등등 수정 -----*/
-.content.f_set.cs_last {font-family: 'font_ns','Apple SD Gothic Neo', sans-serif; line-height: normal; font-size:14px;}
+.content.cs_last {font-family: 'font_ns','Apple SD Gothic Neo', sans-serif; line-height: normal; font-size:14px;}
 .content .only_english {font-family: 'font_gs','Apple SD Gothic Neo', sans-serif !important; line-height: normal; font-size: inherit;}
 
 /* lnb common */
@@ -15,18 +21,19 @@
 .cs_last .page_location .title {float:left;font-size: 40px; font-weight:700; line-height: normal;}
 .cs_last .page_location .title a {display: block;}
 
-.cs_last h3.page_title {font-size: 23px;font-weight: 700;margin-bottom: 15px; min-height:auto;}  
+.cs_last .page_stitle {}
+.cs_last h3.page_title {font-size: 28px;font-weight: 700;margin-bottom: 10px; min-height:auto;}  
 .cs_last .tit01 {font-size: 18px; font-weight:500; line-height: normal; min-height:auto; margin-bottom:10px; margin-top:40px;}
 .cs_last .save_point > .inner .tit01 {margin-top:0;}
-.cs_last .page_stitle a { font-size: 22px; line-height: 1.4; margin-bottom: 15px; letter-spacing: -1px; font-weight: 700; color:#bebebe;}
-.cs_last .page_stitle a.active {color:#000;}
+.cs_last .page_stitle a { font-size: 22px; line-height: 1.4; margin-bottom: 0px; letter-spacing: -1px; font-weight: 700; color:#000;}
 
 .cs_last h4.important_info {font-size:18px; line-height: normal; margin-bottom: 5px; }
 .cs_last .detail_txt {color: #898989;  line-height: normal; font-weight: 300; font-size:14px;}
 
 /* list */
-.cs_last ul.list_type02 > li {font-size: 14px; font-weight:300; line-height: 1.4; margin-bottom: 5px; word-break: break-all; background-position: 0 8px;}
-
+.cs_last ul.list_type02 {margin-top: 10px;}
+.cs_last ul.list_type02 > li {position:relative; font-size: 13px; font-weight:400; line-height: 1.4; margin-bottom: 5px; word-break: break-all; background: none; padding-left:10px; color:#313131;}
+.cs_last ul.list_type02 > li:before {content: ''; display:block; width:4px; height: 4px; background: #000; position:absolute; top:6px; left:0;}
 /* table */
 /* 
 	table02 td: height: 55px; 
@@ -71,21 +78,20 @@
 
 .cs_last .bbs_list01 {border-collapse: separate; position: relative;}
 .cs_last .bbs_list01 .t_left {padding-left:0px;}
-.cs_last .bbs_list01 thead {}
-.cs_last .bbs_list01 thead th, .cs_last .bbs_list01 tbody td {font-size:14px; line-height: normal; border-right:1px solid #eaeaea;  text-align:center;}
-.cs_last .bbs_list01 thead th:first-child, .cs_last .bbs_list01 tbody td:first-child {border-left:1px solid #eaeaea;}
-.cs_last .bbs_list01 thead th {padding:11px 0; font-weight: 700;}
-.cs_last .bbs_list01 thead th.fir {border-width:1px 0 1px 1px;}
-.cs_last .bbs_list01 thead th.last {border-width:1px 1px 1px 0;}
-.cs_last .bbs_list01 tbody td,
-.cs_last .bbs_list01.tbl_slide tbody td {padding:14px 12px 15px !important; text-align:center !important; font-weight: 500;}
-.cs_last .bbs_list01 tbody td a {color:#898989; font-size:inherit; line-height: inherit; font-weight: inherit;}
 
-.cs_last .bbs_list01 tbody tr.conts td {padding:0 0;text-align:left;background:#f5f5f1;}
+.cs_last .bbs_list01 thead {}
+.cs_last .bbs_list01 thead th, .cs_last .bbs_list01 tbody td {font-size:14px; line-height: normal; border-right:0;border-left:0;  text-align:center;}
+.cs_last .bbs_list01 thead th {font-size: 14px; color: #313131; padding: 16px 0 17px;font-weight:500;background: #fafafa;border-top:2px #000 solid;border-bottom:1px #eee solid;}
+.cs_last .bbs_list01 tbody td, 
+.cs_last .bbs_list01.tbl_slide tbody td{padding: 25px 20px 24px;text-align:center;font-weight: 500;color: #000;}
+.cs_last .bbs_list01.tbl_slide tbody td {padding-left:50px; padding-right: 50px;}
+.cs_last .bbs_list01 tbody td a {color:inherit; font-size:inherit; line-height: inherit; font-weight: inherit;}
+
+.cs_last .bbs_list01 tbody tr.conts td {padding:0 0;text-align:left;background:#fafafa;}
 
 /*_ board 최상단 고정 */
 .cs_last .bbs_list01 .list_fixed,
-.cs_last .bbs_list01 .list_fixed.conts {background: #f5f5f1;}
+.cs_last .bbs_list01 .list_fixed.conts {background: #fafafa;}
 .cs_last .bbs_list01 .list_fixed td, .cs_last .bbs_list01 .list_fixed td a.click {color:#646464;}
 
 
@@ -120,13 +126,15 @@
 /* search */
 .cs_last .search_box02 {padding:40px 10px;text-align:center;border: 0 none;background:#f5f5f1;}
 .cs_last .search_box02 .stit {font-size: 24px; font-weight: 700; vertical-align: middle;}
-.cs_last .search_box02 .text_box {position:relative;display:inline-block;width:266px;height: auto;padding: 5px 45px 5px 23px;vertical-align: middle;background: #fff;border-radius: 0;border: 2px #000 solid;}
-.cs_last .search_box02 .text_box input[type="text"] {width:100%;height: 36px;color:#fff;font-size: 16px;border:0;background: #fff;outline:none;}
-.cs_last .search_box02 .text_box .search_btn {position:absolute;top: 50%;margin-top: -16px;right:16px;display:inline-block;width:19px;height:30px;background:url(https://simage.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/common/ico_search02.gif) no-repeat 50% 50%;}
+.cs_last .search_box02 .text_box {position:relative;display:inline-block;width: 420px;height: auto;padding: 5px 45px 5px 10px;vertical-align: middle;background: #fff;border-radius: 0;border: 2px #000 solid;}
+.cs_last .search_box02 .text_box input[type="text"] {width:100%;height: 36px;color:#000;font-size: 16px;border:0;background: #fff;outline:none;}
+.cs_last .search_box02 .text_box .search_btn {position:absolute;top: 50%;margin-top: -15px;right: 10px;display:inline-block;width: 33px;height: 29px;background:url(../../images/new/icon_cs_search.png) no-repeat 50% 50%;}
 .cs_last .search_box02 .text_box .search_btn span {display:inline-block;visibility:hidden;font-size:0;line-height:0}
 .cs_last .search_box02 .text_box .exm_txt {position:absolute;top: 50%;margin-top: -15px;left: 10px;color: #BDBDBD;font-size: 14px;line-height:30px;}
 
 .cs_last .search_box02 .wordlist {height:auto; line-height: normal;}
+
+
 
 /* btn */
 .cs_last .btn_type07 {font-size: 14px;min-width: 105px;padding: 10px 30px 11px 13px;height: auto;line-height: normal;}
@@ -134,22 +142,25 @@
 .cs_last .btn_type03 {height: auto;line-height: normal;font-size: 16px;padding: 17px 55px 17px;vertical-align: middle;width: auto;font-weight: 500;letter-spacing: 1.5px;}
 
 /* sos 상담 */
-.sos_counsel .txt { line-height: 1.5;}
-.sos_counsel .btn_type01 {font-size: 12px;padding: 6px 11px; height: auto; line-height: 1.4;}
+.cs_last .sos_counsel .txt { line-height: 1.5;}
+.cs_last .sos_counsel .btn_type01 {font-size: 12px;padding: 6px 11px; height: auto; line-height: 1.4;}
 
 /* unit */
-.input_txt, textarea {padding: 6px 4px 6px 4px;border: 1px solid #ccc;color: #000000;line-height: 1.4;font-size: 14px;}
-.input_txt {vertical-align: middle;height: auto;}
-input::placeholder, 
-input::-webkit-input-placeholder, 
-input:-ms-input-placeholder, textarea::-webkit-input-placeholder, textarea:-ms-input-placeholder {  color: #898989 !important; }
+.cs_last .input_txt, textarea {padding: 6px 4px 6px 4px;border: 1px solid #ccc;color: #000000;line-height: 1.4;font-size: 14px;}
+.cs_last .input_txt {vertical-align: middle;height: auto;}
+.cs_last input::placeholder {  color: #898989 !important; } 
+.cs_last input::-webkit-input-placeholder {  color: #898989 !important; } 
+.cs_last input:-ms-input-placeholder {  color: #898989 !important; }
+.cs_last textarea::-webkit-input-placeholder {  color: #898989 !important; }
+.cs_last textarea:-ms-input-placeholder {  color: #898989 !important; }
 
 /*_ input_file 첨부 */
-.file_input {position: relative;height: 100%;}
-.file_input label {position: absolute;top: 0;left: 0;cursor:pointer;height: inherit;}
-.file_input label span.text {font-size: inherit;font-weight: inherit;color:#fff;text-align:center;padding: 4px 25px 6px;height: auto;line-height: normal;width: auto;background: #4f4f4f;margin-left: 195px;/* margin-top: 9px; */display: inline-block;}
-.file_input label input { position:absolute; width:0; height:0; overflow:hidden;}
+.cs_last .file_input {position: relative;height: 100%;}
+.cs_last .file_input label {position: absolute;top: 0;left: 0;cursor:pointer;height: inherit;}
+.cs_last .file_input label span.text {font-size: inherit;font-weight: inherit;color:#fff;text-align:center;padding: 4px 25px 6px;height: auto;line-height: normal;width: auto;background: #4f4f4f;margin-left: 195px;/* margin-top: 9px; */display: inline-block;}
+.cs_last .file_input label input { position:absolute; width:0; height:0; overflow:hidden;}
 
 
 /* paging */
-.paging ul li a {font-size: 14px; line-height: 20px;}
+.cs_last .paging {margin-top: 50px;}
+.cs_last .paging ul li a {font-size: 14px; line-height: 20px;}
