--- a/PC/css/new/orderandpay.css
+++ b/PC/css/new/orderandpay.css
@@ -524,11 +524,21 @@
 .orderandpay .paging ul li a {font-size: 22px;line-height: initial;font-weight: 500;font-family: 'GS','Apple SD Gothic Neo', sans-serif;border: 0;min-width: 10px;height: auto;padding: 8px 13px;}
 .orderandpay .paging ul li.active a,
 .orderandpay .paging ul li a:hover,
-.orderandpay .paging ul li a:focus {background: #000;color: #fff;border:0;   vertical-align: top;width: 48px;height: 48px;padding-top: 15px; border-radius: 24px;font-weight: 700;}
+.orderandpay .paging ul li a:focus {background: #000;color: #fff;border:0;vertical-align: top;/* width: 48px; *//* height: 48px; *//* padding-top: 15px; */border-radius: 24px;font-weight: 700;}
 
 .orderandpay .paging ul {display: inline-block;}
-.orderandpay .paging ul li {display: inline-block; vertical-align: top; text-align: center; box-sizing: border-box; width: 48px; height: 48px; padding-top: 15px; border-radius: 24px; font-family: font_gs;
- font-size: 22px;}
+.orderandpay .paging ul li {
+ display: inline-block;
+ vertical-align: top;
+ text-align: center;
+ box-sizing: border-box;
+ width: 48px;
+ /* height: 48px; */
+ /* padding-top: 15px; */
+ border-radius: 24px;
+ font-family: font_gs;
+ font-size: 22px;
+ }
 .orderandpay .paging ul li a {display: block;}
 
 /* icon - new */
